--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1>👋 Hi, I'm Amoogh Shirodkar</h1>
+<h1> Hi, I'm Amoogh Shirodkar</h1>
 <h3>Computer Engineer | AI + Cloud | Cybersecurity + Digital Forensics</h3>
 
 <p>
@@ -21,7 +21,7 @@ computational intelligence.
 
 <hr>
 
-<h2>🚀 Featured Projects</h2>
+<h2> Featured Projects</h2>
 
 <ul>
   <li><b>Protein Structure Predictor (ML + Bioinformatics)</b>  
@@ -42,7 +42,7 @@ computational intelligence.
 
 <hr>
 
-<h2>📌 Technical Skills</h2>
+<h2> Technical Skills</h2>
 <ul>
   <li>Python, SQL, Flask, React, Vue, Node.js</li>
   <li>AWS, Docker, Kubernetes, Jenkins</li>
@@ -52,15 +52,15 @@ computational intelligence.
 
 <hr>
 
-<h2>📄 Research Interests</h2>
+<h2> Research Interests</h2>
 <p><b>AI-Driven Threat Detection Systems for Cloud & Distributed Networks</b></p>
 
 <hr>
 
-<h2>📬 Contact</h2>
+<h2> Contact</h2>
 <p>
-📧 Email — amooghshirodkar45@gmail.com <br>
-🔗 GitHub — <a href="https://github.com/AmooghShirodkar">github.com/AmooghShirodkar</a>
+ Email — amooghshirodkar45@gmail.com <br>
+ GitHub — <a href="https://github.com/AmooghShirodkar">github.com/AmooghShirodkar</a>
 </p>
 
 </body>
